testsuite/tests/rename/should_fail/T23740j.hs
{-# LANGUAGE RequiredTypeArguments #-}

module T23740j where

x :: ()
x = ()
  where
    a = a
    f :: a -> a
    f = f
