testsuite/tests/rename/should_fail/T23740j.stderr

T23740j.hs:9:10: error: [GHC-45510]
    • Term variable ‘a’ cannot be used here
        (term variables cannot be promoted)
    • In the type signature: f :: a -> a
      In an equation for ‘x’:
          x = ()
            where
                a = a
                f :: a -> a
                f = f
